--- a/app/views/fiddle.html
+++ b/app/views/fiddle.html
@@ -6,8 +6,8 @@
 
 <div class="col-xs-2">
   <button class="btn btn-block btn-default" ng-click="run()">Run</button>
-<!--   <button class="btn btn-block btn-default">Save</button>
- --></div>
+  <button class="btn btn-block btn-default" ng-click="open()">Open</button>
+</div>
 
 <div class="col-xs-5">
   <div class="area">
