--- a/app/views/fiddle.html
+++ b/app/views/fiddle.html
@@ -1,6 +1,6 @@
 <div class="col-xs-12">
   <div class="form-group">
-    <input type="text" class="form-control" ng-model="theme.title" placeholder="Title">
+    <input type="text" class="form-control" ng-model="theme.Title" placeholder="Title">
   </div>
 </div>
 
