--- a/app/views/main.html
+++ b/app/views/main.html
@@ -2,8 +2,9 @@
     <div class="header">
 
       <ul class="nav nav-pills pull-right">
+      
       </ul>
-      <h3 class="text-muted">My JS Fiddle</h3>
+      <h3 class="text-muted">AngularJS Fiddle</h3>
 
     </div>
 
