--- a/templates/hello.tmpl
+++ b/templates/hello.tmpl
@@ -1,29 +1,41 @@
-<style type="text/css">  
-  {{.Css}}
-</style>
-{{.Html}}
+<!DOCTYPE html>
+<html lang="en">
+<head>
 
-<script src="/bower_components/jquery/dist/jquery.js"></script>
-<script src="/bower_components/angular/angular.js"></script>
-<script src="/bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/affix.js"></script>
-<script src="/bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/alert.js"></script>
-<script src="/bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/button.js"></script>
-<script src="/bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/carousel.js"></script>
-<script src="/bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/collapse.js"></script>
-<script src="/bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/dropdown.js"></script>
-<script src="/bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/tab.js"></script>
-<script src="/bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/transition.js"></script>
-<script src="/bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/scrollspy.js"></script>
-<script src="/bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/modal.js"></script>
-<script src="/bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/tooltip.js"></script>
-<script src="/bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/popover.js"></script>
-<script src="/bower_components/angular-resource/angular-resource.js"></script>
-<script src="/bower_components/angular-cookies/angular-cookies.js"></script>
-<script src="/bower_components/angular-sanitize/angular-sanitize.js"></script>
-<script src="/bower_components/angular-animate/angular-animate.js"></script>
-<script src="/bower_components/angular-touch/angular-touch.js"></script>
-<script src="/bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+  <meta charset="UTF-8">
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width">
+  <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.css" />
 
-<script type="text/javascript">
-  {{.Js}}
-</script>
+  <style type="text/css">  
+    {{.Css}}
+  </style>
+
+  <title>{{.Title}}</title>
+
+</head>
+
+<body ng-app="sample">
+
+    {{.Html}}
+  
+    <script src="/bower_components/jquery/dist/jquery.js"></script>
+    <script src="/bower_components/angular/angular.js"></script>
+    <script src="/bower_components/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="/bower_components/angular-resource/angular-resource.js"></script>
+    <script src="/bower_components/angular-cookies/angular-cookies.js"></script>
+    <script src="/bower_components/angular-sanitize/angular-sanitize.js"></script>
+    <script src="/bower_components/angular-animate/angular-animate.js"></script>
+    <script src="/bower_components/angular-touch/angular-touch.js"></script>
+    <script src="/bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+
+    <script type="text/ng-template" id="/directive.html">
+      {{.Directive}}
+    </script>    
+
+    <script type="text/javascript">
+      {{.Js}}
+    </script>
+
+</body>
+</html>
