--- a/app/views/fiddle.html
+++ b/app/views/fiddle.html
@@ -1,4 +1,4 @@
-<form action="/app/theme/fork" method="post">
+<form action="/fiddle/app/theme/fork" method="post">
   
     <input type="hidden" name="mode" value="{{Mode.perspective}}">
 <div class="row">
